<resources>
    <string name="app_name">Mental Hub</string>
    <string name="title">Give your journal a title</string>
    <string name="delete">Delete</string>
    <string name="cbtTitle">Intro to CBT: Why Thoughts Matter</string>
    <string name="mindfulnessTitle">The Benefits of Mindfulness</string>
    <string name="journaltitle">Journal Title</string>
    <string name="firebase_database_url">https://mentalhub-4fd78-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="timestamp">Date Created</string>
    <string name="tutorialText">Mental Hub is here to guide you through the application. If you are having a hard time navigating the application click the tutorial image.</string>
    <string name="journalhint">This can be journal content that can be long</string>
    <string name="date">What is the date today?</string>
    <string name="content">How are you? Write everything that happened to you here today.</string>
    <string name="eat26">Eat-26</string>
    <string name="submit">submit</string>
    <string name="always">Always</string>
    <string name="usually">Usually</string>
    <string name="often">Often</string>
    <string name="sometimes">Sometimes</string>
    <string name="rarely">Rarely</string>
    <string name="never">Never</string>
    <string name="relax">Relax and Play...</string>
    <string name="journaling">Journaling</string>
    <string name="cognitive_Restruc">Cognitive Restructuring</string>
    <string name="breathing">Breathing</string>
    <string name="mindfulness">Mindfulness and Relaxation</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="eat26Assessment">EAT26 Assessment</string>
    <string name="checkProgress">Check Progress</string>
    <string name="playNow">Play Now</string>
    <string name="AddNewNote">Add New Journal Entry:</string>
    <string name="myJournal">My Journal</string>
    <string name="psychoeducation">Psycho education</string>
    <string name="askUser">How are you feeling today?</string>
    <string name="question1">I am terrified of being overweight</string>
    <string name="question2">Avoid eating when I am hungry</string>
    <string name="question3">Find myself preoccupied with food</string>
    <string name="question4">Have gone on eating binges where I felt that I may not be able to stop</string>
    <string name="question5">Cut my food into small pieces</string>
    <string name="question6">Aware of the calorie content of foods that I eat</string>
    <string name="question7">Particularly avoid food with a high carbohydrates content (i.e. bread, rice, potatoes, etc.)</string>
    <string name="question8">Feel that others would prefer if I ate more</string>
    <string name="question9">Vomit after I have eaten</string>
    <string name="question10">Feel extremely guilty after eating</string>
    <string name="question11">Am preoccupied with a desire to be thinner</string>
    <string name="question12">Think about burning calories when I exercise</string>
    <string name="question13">Other people think that I am too thin</string>
    <string name="question14">Am preoccupied with the thought of having fat on my body</string>
    <string name="question15">Take longer than others to eat my meals</string>
    <string name="question16">Avoid foods with sugar in them</string>
    <string name="question17">Eat diet foods</string>
    <string name="question18">Feel that food controls my life</string>
    <string name="question19">Display self-control around food</string>
    <string name="question20">Feel that others pressure me to eat</string>
    <string name="question21">Give too much time and thought about food</string>
    <string name="question22">Feel uncomfortable eating sweets</string>
    <string name="question23">Engage in dieting behaviour</string>
    <string name="question24">Like my stomach to be empty</string>
    <string name="question25">Have the impulse to vomit after meals</string>
    <string name="question26">Enjoy trying new rich foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_1">Option 1</string>
    <string name="questions_will_be_shown_here">Questions will be shown here</string>
    <string name="option_2">option 2</string>
    <string name="option_3">option 3</string>
    <string name="option_4">option 4</string>
    <string name="you_are_at_risk_of">You are at risk of :</string>
    <string name="msg_token_fmt">token</string>
    <string name="a_desc">Lorem ipsum dolor sit amet. Id enim rerum et omnis voluptas in perferendis quia vel quos culpa vel eius sapiente sit sequi sunt. Qui exercitationem minus et consectetur molestiae qui quia dolores 33 nihil illo ut earum illo sit architecto quia. Ab consectetur cumque ut galisum expedita ut modi laboriosam. Qui explicabo natus et voluptas asperiores est delectus totam et dolor accusantium eum laboriosam quos.</string>
    <string name="b_desc">Lorem ipsum dolor sit amet. Id enim rerum et omnis voluptas in perferendis quia vel quos culpa vel eius sapiente sit sequi sunt. Qui exercitationem minus et consectetur molestiae qui quia dolores 33 nihil illo ut earum illo sit architecto quia. Ab consectetur cumque ut galisum expedita ut modi laboriosam. Qui explicabo natus et voluptas asperiores est delectus totam et dolor accusantium eum laboriosam quos.</string>
    <string name="c_desc">Lorem ipsum dolor sit amet. Id enim rerum et omnis voluptas in perferendis quia vel quos culpa vel eius sapiente sit sequi sunt. Qui exercitationem minus et consectetur molestiae qui quia dolores 33 nihil illo ut earum illo sit architecto quia. Ab consectetur cumque ut galisum expedita ut modi laboriosam. Qui explicabo natus et voluptas asperiores est delectus totam et dolor accusantium eum laboriosam quos.</string>
    <string name="d_desc">Lorem ipsum dolor sit amet. Id enim rerum et omnis voluptas in perferendis quia vel quos culpa vel eius sapiente sit sequi sunt. Qui exercitationem minus et consectetur molestiae qui quia dolores 33 nihil illo ut earum illo sit architecto quia. Ab consectetur cumque ut galisum expedita ut modi laboriosam. Qui explicabo natus et voluptas asperiores est delectus totam et dolor accusantium eum laboriosam quos.</string>
    <string name="e_desc">Lorem ipsum dolor sit amet. Id enim rerum et omnis voluptas in perferendis quia vel quos culpa vel eius sapiente sit sequi sunt. Qui exercitationem minus et consectetur molestiae qui quia dolores 33 nihil illo ut earum illo sit architecto quia. Ab consectetur cumque ut galisum expedita ut modi laboriosam. Qui explicabo natus et voluptas asperiores est delectus totam et dolor accusantium eum laboriosam quos.</string>
</resources>