<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@color/white"
    android:background="@drawable/rounded_corner">

    <TextView
        android:id="@+id/journal_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/journaltitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginVertical="4dp"/>
    <TextView
        android:id="@+id/journal_content_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/journalhint"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="17sp"
        android:layout_marginVertical="4dp"/>
    <TextView
        android:id="@+id/journal_date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_marginVertical="4dp"/>

</LinearLayout>