<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".quiz.QuizTest">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/journalBG">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/topicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Selected Topic Name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:orientation="horizontal">
            
            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="00:59"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="Questions"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-20dp"
        android:background="@drawable/round_back_light_pink"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="@string/questions_will_be_shown_here"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_background"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="Next"
        android:layout_marginEnd="20dp"/>

</LinearLayout>