<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/journalBG"
    android:padding="16dp"
    tools:context=".journal.JournalDetailsActivity">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignLeft="@id/page_title"
            android:layout_above="@id/page_title"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_done_24"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster_regular"
            android:text="@string/AddNewNote"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/save_note_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_done_24"
            app:tint="@color/white" />

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_bar_layout"
            android:layout_marginVertical="36dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/logo_color"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/note_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/title"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/note_emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="How are you feeling today?"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <RadioGroup
                android:id="@+id/note_emotion_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/amazing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Amazing"
                    android:drawableBottom="@drawable/amazed_bw"
                    android:button="@null"
                    android:tag="amazing"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/happy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableBottom="@drawable/happy_bw"
                    android:button="@null"
                    android:gravity="center"
                    android:tag="happy"
                    android:text="Happy" />
                <RadioButton
                    android:id="@+id/neutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/neutral_bw"
                    android:button="@null"
                    android:gravity="center"
                    android:tag="neutral"
                    android:text="Neutral" />
                <RadioButton
                    android:id="@+id/sad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableBottom="@drawable/sad_bw"
                    android:button="@null"
                    android:gravity="center"
                    android:tag="sad"
                    android:text="Sad" />
                <RadioButton
                    android:id="@+id/angry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/angry_bw"
                    android:button="@null"
                    android:gravity="center"
                    android:tag="angry"
                    android:text="Angry"/>
            </RadioGroup>

            <EditText
                android:id="@+id/note_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/notes_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginVertical="8dp"
                android:hint="@string/content"
                android:gravity="top"
                android:minLines="15"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_note_text_view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:visibility="gone"
        android:fontFamily="@font/segoe_ui_bold"
        android:background="@drawable/mybutton"
        android:drawableTop="@drawable/ic_baseline_delete_24"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>